app/contact/page.module.css
.main {
	padding: 4vh 2vw;
	display: flex;
	flex-direction: row;
	gap: 2rem;
	justify-content: space-around;
}

.formCard {
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: #fff;
	border-radius: 1rem;
	width: 100%;
	position: relative;
	margin-top: 1rem;
	box-shadow: 0px 4px 16px rgba(73, 120, 187, 0.3);
}

.inlineLabel {
	font-size: 0.75rem;
	padding-bottom: 0.5rem;
}

.form fieldset>.inlineLabel {
	padding-top: 1rem;
}

.form fieldset>.inlineLabel ~ .inlineLabel {
	padding-top: 1.5rem;
}

.inlineLabel * {
	display: inline-block;
	padding: 0 1rem 0 0;
}

.inlineForm {
	display: flex;
	flex-direction: row;
	gap: 1rem;
}

.inlineForm>.block {
	flex-grow: 1;
	max-width: 50%;
}

.inlineLabel p {
	font-size: 1.25rem;
}


.block>not(AnimatedPresence) {
	display: block;
}

.form {
	width: 100%;
	height: 100%;
	padding: 0.5rem 1rem;
}

.form input:not(.button) {
	font-size: 1rem;
	padding: 1rem;
	width: 100%;
}

.form label {
	font-size: 0.75rem;
	padding-bottom: 0.5rem;
}

.form fieldset {
	border: none;
}

.error label {
	color: #ce2c30;
}

.error>input {
	border: 2px solid #ce2c30;
}

.errorMsg {
	background-color: #ce2c30;
	padding: 0.5rem;
	color: white;
	display: flex;
	flex-direction: row;
	align-items: center;
	margin: 0.5rem 0;
}

.overlayDiv {
	position: absolute;	
	top: 50%;
	left: 50%;
	transform: translateY(-50%) translateX(-50%);
	text-align: center;
}

.button {
	background-color: #4977BB;
	color: #fff;
	font-size: 1.5rem;
	padding: 1rem;
	border-radius: 50px;
	border: none;
	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.20);
	cursor: pointer;
	margin: 1rem 0;
}

.button:hover {
	background-color: #5b85c2;
}

.button:active, .button:disabled {
	background-color: #35598e;
}

.loader {
	border: 5px solid #c0c0c0;
	border-top: 5px solid #fff;
	border-radius: 50%;
	background-color: #4977bb;
	margin-left: 1rem;
}

